# ogniewski-scaler

./: .clang-format  .gitattributes  .gitignore  COPYING  ChangeLog  HACKING  README  README.md  configure  configure.in
help/en/: index.html
po/: az.gmo  az.po  de.gmo  de.po  fr.gmo  fr.po  ru.gmo  ru.po  sk.gmo  sk.po  sv.gmo  sv.po  zh_TW.gmo  zh_TW.po
src/: Makefile.am  Makefile.in  gimp-plugin-template  interface.c  interface.h  main.c  main.h  plugin-intl.h  render.c  render.h  scaling.h
src/.deps/: interface.Po  main.Po  render.Po
